--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,8 @@
 /AccessModifire.class
 /AccessModifireDemo.class
 /Class_ex.class
+/SayHello.class
 /TwoDArray.class
 /Vehicle1.class
 /array_ex1.class
-/SayHello.class
+/inner_class/
